--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
             </div>
             <div class="card-filtros">
                 <div class="card row card-style">
+                    <div class="container-filtros-ocultar d-flex justify-content-between">
+                    <div> 
                     <h5 class="card-title">Filtros</h5>
-                    <form>
+                    </div>
+                    <div>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item btn-ocultar-filtros" id="btn-ocultar-filtros"><a href="#">Ocultar filtros</a></li>
+                          </ol>
+                    </div>
+                    </div>
+                    <form id="form-filtros">
                         <div class="mb-3">
                             <label for="" class="form-label">Tipo</label>
-                            <select type="select" class="form-control" id="" aria-describedby="">
+                            <select type="select" class="form-select" id="" aria-describedby="">
                                 <option value="TODOS">Todos</option>
                                 <option value="GASTO">Gasto</option>
                                 <option value="GANANCIA">Ganancia</option>
@@ -60,7 +69,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="" class="form-label">Categoría</label>
-                            <select type="select" class="form-control" id="" aria-describedby="">
+                            <select type="select" class="form-select" id="" aria-describedby="">
                                 <option value="TODAS">Todas</option>
                                 <option value="#">Comida</option>
                                 <option value="#">Salidas</option>
@@ -71,11 +80,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Desde</label>
-                            <input type="date" class="form-control" id="exampleInputPassword1">
+                            <input type="date" class="form-select" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Ordenar por</label>
-                            <select type="select" class="form-control" id="" aria-describedby="">
+                            <select type="select" class="form-select" id="" aria-describedby="">
                                 <option value="MAS_RECIENTES">Más reciente</option>
                                 <option value="MENOS_RECIENTES">Menos reciente</option>
                                 <option value="MAYOR_MONTO">Mayor monto</option>
