update/cambios de estilos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
 
-    <main class="container main-container d-flex flex-wrap bd-highlight ">
+    <main class="container main-container d-flex flex-wrap bd-highlight">
         <div class="my-card-body row">
             <div class="card col shadow p-3 mb-5 bg-body rounded card-style">
                 <h5 class="card-title">Balance</h5>
@@ -70,16 +70,16 @@
                     </div>
                     <form id="form-filtros">
                         <div class="mb-3">
-                            <label for="" class="form-label">Tipo</label>
-                            <select type="select" class="form-select" id="" aria-describedby="">
+                            <label for="select-tipo-filtro" class="form-label">Tipo</label>
+                            <select type="select" class="form-select" id="select-tipo-filtro" aria-describedby="">
                                 <option value="TODOS">Todos</option>
                                 <option value="GASTO">Gasto</option>
                                 <option value="GANANCIA">Ganancia</option>
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="" class="form-label">Categoría</label>
-                            <select type="select" class="form-select" id="" aria-describedby="">
+                            <label for="select-filtro-categoria" class="form-label">Categoría</label>
+                            <select type="select" class="form-select" id="select-filtro-categoria" aria-describedby="">
                                 <option value="TODAS">Todas</option>
                                 <option value="#">Comida</option>
                                 <option value="#">Salidas</option>
@@ -89,8 +89,8 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Desde</label>
-                            <input type="date" class="form-select" id="exampleInputPassword1">
+                            <label for="input-filtro-fecha" class="form-label">Desde</label>
+                            <input type="date" class="form-select input-filtro-fecha" id="input-filtro-fecha">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Ordenar por</label>
