--- a/index.html
+++ b/index.html
@@ -31,20 +31,16 @@
             </button>
             <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
-                    <a id="balance" class="nav-link my-nav-link" aria-current="page" href="#">Balance</a>
-                    <a id="categorias" class="nav-link my-nav-link" href="#">Categorías</a>
-                    <a id="reportes" class="nav-link my-nav-link" href="#">Reportes</a>
+                    <a id="balance" class="nav-link my-nav-link" aria-current="page" href="#"><i class="fa-solid fa-chart-line"></i> Balance</a>
+                    <a id="categorias" class="nav-link my-nav-link" href="#"><i class="fa-solid fa-folder-tree"></i> Categorías</a>
+                    <a id="reportes" class="nav-link my-nav-link" href="#"><i class="fa-solid fa-chart-pie"></i> Reportes</a>
                 </div>
             </div>
         </div>
     </nav>
 
-<<<<<<< HEAD
-    <main class="container main-container d-flex flex-wrap bd-highlight ">
-=======
 
     <main class="container main-container d-flex flex-wrap bd-highlight " >
->>>>>>> 7f2228fedbcbc5feb3cad71ece34a712c89b04cf
         <div class="my-card-body row" id="primera-pagina">
 
             <div class="card col shadow p-3 mb-5 bg-body rounded card-style">
@@ -171,7 +167,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="categoria" class="form-label">Categoria</label>
+                        <label for="categoria" class="form-label">Categorías</label>
                         <select class="form-select" id="categoria" aria-label="Categoria">
                             <option value="Comida">Comida</option>
                             <option value="Servicios">Servicios</option>
