update/agregue box-2 oculto en operaciones

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <main class="container main-container d-flex flex-wrap bd-highlight">
 
             <div class="my-card-body row">
-
+                <!-- ********************************
+            BALANCE
+******************************** -->
                 <div class="card col shadow p-3 mb-5 bg-body rounded card-style">
                     <h5 class="card-title">Balance</h5>
                     <div class="d-flex justify-content-between">
@@ -62,6 +64,9 @@
                         <div class="fw-bold">$0</div>
                     </div>
                 </div>
+                <!-- ********************************
+            FILTROS
+******************************** -->
                 <div class="card-filtros">
                     <div class="card row shadow p-3 mb-5 bg-body rounded card-style">
                         <div class="container-filtros-ocultar d-flex justify-content-between">
@@ -116,10 +121,13 @@
                     </div>
                 </div>
             </div>
-
+            <!-- ********************************
+            OPERACIONES
+******************************** -->
 
             <div class="my-card-body col" style="width: 10rem;" id="card-operaciones">
-                <div class="card card-operaciones shadow p-3 mb-5 bg-body rounded card-style">
+                <div class="card card-operaciones shadow p-3 mb-5 bg-body rounded card-style container-operaciones-uno">
+
                     <div class="d-flex justify-content-between">
                         <h2 class="card-title">Operaciones</h2>
                         <button type="button" id="btn-nueva-operacion"
@@ -127,21 +135,33 @@
                             Nueva
                             operación</button>
                     </div>
-
-                    <div class="d-flex justify-content-center card-operaciones-img">
-                        <img src="./imagenes/operaciones-modo-claro.svg" alt="imagen de operaciones"
-                            class="imagen-operaciones">
+                    <div class="box-operaciones-uno">
+                        <div class="d-flex justify-content-center card-operaciones-img">
+                            <img src="./imagenes/operaciones-modo-claro.svg" alt="imagen de operaciones"
+                                class="imagen-operaciones">
+                        </div>
+                        <div class="operaciones-textos text-center">
+                            <h3>Sin resultados</h3>
+                            <p>Cambia los filtros o agrega operaciones</p>
+                        </div>
                     </div>
-                    <div class="operaciones-textos text-center">
-                        <h3>Sin resultados</h3>
-                        <p>Cambia los filtros o agrega operaciones</p>
+                    <div class="box-operaciones-dos d-none">
+                        <div class="my-4">
+                            <div class="d-inline p-5">Descripción</div>
+                            <div class="d-inline p-5">Categoría</div>
+                            <div class="d-inline p-5">Fecha</div>
+                            <div class="d-inline p-5">Monto</div>
+                            <div class="d-inline p-5">Acciones</div>
+                        </div>
                     </div>
                 </div>
             </div>
 
         </main>
     </div>
-
+    <!-- ********************************
+           + NUEVA OPERACION
+******************************** -->
     <div class="container oculto" id="container-nueva-operacion">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -155,7 +175,7 @@
 
                     <div class="mb-3">
                         <label for="monto" class="form-label">Monto</label>
-                        <input type="number" class="form-control" id="monto">
+                        <input type="number" value="0" class="form-control" id="monto">
                     </div>
 
                     <div class="mb-3">
@@ -168,7 +188,7 @@
 
                     <div class="mb-3">
                         <label for="categoria" class="form-label">Categorías</label>
-                         <select class="form-select" id="categoria" aria-label="Categoria">
+                        <select class="form-select" id="categoria" aria-label="Categoria">
                             <option value="Comida">Comida</option>
                             <option value="Servicios">Servicios</option>
                             <option value="Salidas">Salidas</option>
@@ -191,7 +211,9 @@
             </div>
         </div>
     </div>
-
+    <!-- ********************************
+            CATEGORIAS
+******************************** -->
     <div class="container oculto" id="container-categorias">
         <div class="row justify-content-center">
             <form class="col-md-8 shadow p-3 mb-5 bg-body rounded">
@@ -261,7 +283,9 @@
             </form>
         </div>
     </div>
-
+    <!-- ********************************
+            REPORTES
+    ******************************** -->
     <div class="container oculto" id="container-reportes">
         <div class="row justify-content-center">
             <div class=" col-md-8 shadow p-3 mb-5 bg-body rounded">
