--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagenes/favicon.png">
+    <link rel="shortcut icon" href="imagenes/BS.png">
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -163,20 +163,20 @@
     <!-- ********************************
            + NUEVA OPERACION
 ******************************** -->
-    <div class="container oculto m-5" id="container-nueva-operacion">
+    <div class="container oculto my-5" id="container-nueva-operacion">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <form class="shadow p-3 mb-5 bg-body rounded card-style">
                     <h2 class="mb-5 mt-2">Nueva operación</h2>
                     <div class="mb-3">
                         <label for="descripción" class="form-label">Descripción</label>
-                        <input type="text" class="form-control" id="descripcion-input"
+                        <input type="text" class="form-control" id="descripcion-input" required
                             aria-describedby="descripcion de operacion">
                     </div>
 
                     <div class="mb-3">
                         <label for="monto" class="form-label">Monto</label>
-                        <input type="number" value="0" class="form-control" id="monto">
+                        <input type="number" value="0" class="form-control" id="monto" required>
                     </div>
 
                     <div class="mb-3">
@@ -193,7 +193,7 @@
 
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input type="date" class="form-control" id="fecha" aria-describedby="fecha">
+                        <input type="date" class="form-control" id="fecha" aria-describedby="fecha" required>
                     </div>
 
                     <div class="d-flex justify-content-end mt-5">
@@ -207,7 +207,7 @@
     <!-- ********************************
             CATEGORIAS
 ******************************** -->
-    <div class="container oculto m-5" id="container-categorias">
+    <div class="container oculto my-5" id="container-categorias">
         <div class="row justify-content-center">
             <form class="col-md-8 shadow p-3 mb-5 bg-body rounded">
                 <h2 class="mb-5 mt-2">Categorías</h2>
@@ -279,7 +279,7 @@
     <!-- ********************************
             REPORTES
     ******************************** -->
-    <div class="container oculto m-5" id="container-reportes">
+    <div class="container oculto my-5" id="container-reportes">
         <div class="row justify-content-center">
             <div class=" col-md-8 shadow p-3 mb-5 bg-body rounded">
                 <h2>Reportes</h2>
