update/local storage guarda operaciones, no se rompe al borrar operaciones, se borra el pintado al refrescar la pagina

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
 
-                <form class="shadow p-3 mb-5 bg-body rounded card-style"> 
+                <form class="shadow p-3 mb-5 bg-body rounded card-style" name="myform" novalidate> 
                     <h2 class="mb-5 mt-2">Nueva operación</h2>
                     <div class="mb-3">
                         <label for="descripcion-input" class="form-label">Descripción</label>
